# credix-data-pipeline

./: .gitignore  DATA_ARCHITECTURE.md  README.md  docker-compose.yml  requirements.in  requirements.txt
.github/workflows/: terraform-ci-cd.yaml
credix_pipeline/: pyproject.toml  setup.py
credix_pipeline/credix_pipeline/: __init__.py  setup.cfg
credix_pipeline/credix_pipeline/assets/: __init__.py  cnpj_assets.py  gold_assets.py  installments_assets.py
credix_pipeline/credix_pipeline/credix_pipeline/: definitions.py
credix_pipeline/credix_pipeline/credix_pipeline/assets/: __init__.py  cnpj_assets.py  elementary_assets.py  installments_assets.py
credix_pipeline/credix_pipeline/credix_pipeline/jobs/: __init__.py  data_pipeline_jobs.py
credix_pipeline/credix_pipeline/credix_pipeline/resources/: __init__.py  dbt_resource.py  gcp_resource.py
credix_pipeline/credix_pipeline/credix_pipeline/utils/: cdc_helpers.py  data_processing.py
credix_pipeline/credix_pipeline/jobs/: __init__.py  data_pipeline_jobs.py
credix_pipeline/credix_pipeline/resources/: __init__.py  postgres_resource.py
credix_pipeline/credix_pipeline/utils/: cdc_helpers.py  data_processing.py  gcs_operations.py
dbt/: .user.yml  profiles.yml
dbt/business_case/: .user.yml  catalogs.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
docker/dagster/: Dockerfile  requirements.txt
docker/data-loader/: Dockerfile  parquet_to_postgres.py  requirements.txt
terraform/: bigquery.tf  bigquery_tables.tf  iam.tf  main.tf  outputs.tf  storage.tf  terraform.tfvars  variables.tf
(+45 files in other folders)
